Changelog for logilab database package
======================================


--

    * #132590 (sqlgen): allow to give arbitrary SQL expression (e.g. function call)
      as argument to select/insert/delete/set methods by giving SQLExpression instances 
      instead of bare strings

2012-02-03  --  1.8.2
    * don't use CURRENT_DATETIME for postgresql (#83892)

    * sqlserver: sql_current_[date|timestamp] shouldn't return date[time] objects (#88279)

    * process_cursor fixes (#88281)



2011-12-01  --  1.8.1
    * implement db helper date manipulation helpers for sqlserver  (closes
	#83603)



2011-11-07  --  1.8.0
    * new process_cursor method (closes #77769)

    * new "at_tz" function to get back a timestamp at a given time-zone (closes #81267)

    * dropped support for posgres < 8.3 (closes #76944)



2011-10-17  --  1.7.0
    * new WEEKDAY date extraction function

    * sqlserver support for other existing date extraction function, added
	helper to get list of VIEWs



2011-08-05  --  1.6.3
    * closes #72219: sqlserver doesn't support TRUE/FALSE



2011-07-27  --  1.6.2
    * actually fix sqlite boolean type to use 0 and 1 properly



2011-07-27  --  1.6.1
    * [fti] exclude numbers from stop words in fti parser (closes: #69471)

    * fix backup/restore commands for sqlite backend (closes: #69607)

    * fix checking of maximum number of function (closes: #71413)

    * support for COUNT(DISTINCT ...) (closes: #71414)

    * sqlite has no boolean type, should use 0 and 1



2011-06-09  --  1.6.0
    * new CAST function

    * new methods on db_helpers to support regexp-based pattern
      matching, using a REGEXP operator

    * support BigInt mapping

    * added sql_restart_sequence to dbhelper classes

    * tz datetime fix (don't return datetime with tz info set )

    * use logging and not print statements (closes #64792)



2011-04-01  --  1.5.0
    * fix deprecation warning and depend on common 0.55.2

    * TZ datetime and time support

