@@ -8,6 +8,9 @@ Changelog for logilab database package
       as argument to select/insert/delete/set methods by giving SQLExpression instances 
       instead of bare strings
 
+    * #132587: TYPE_CONVERTERS dictionary on db helper containing type 
+      conversion callback
+
 2012-02-03  --  1.8.2
     * don't use CURRENT_DATETIME for postgresql (#83892)
 
